--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.9.0",
+    "convex-helpers": "^0.1.19",
     "date-fn": "^0.0.2",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
